# task

./: .gitignore  index.html  plan.md  zksnark_math.html
ai/: agentic_rag.ipynb  pyproject.toml
ai/.ipynb_checkpoints/: agentic_rag-checkpoint.ipynb
docs/: a16z-big-ideas-2026-part-1.html  agentic-ai-multi-turn.html
eng/: 2025-12-11-design-feedback-grammar.html  2025-12-11-election-grammar.html  2025-12-11-market-creation-feedback.html  2025-12-11-server-instruction-grammar.html  holy-grail-crypt-privacy-study.html  holy-grail-crypt-privacy.txt  holy-grail-study-light.html
nostra/: README.md  TESTING_GUIDE.md  batch-plan.md  brazil_win_results.md  brazil_win_simulation.ipynb  design.html  eng.html  future-plan.html  main.py  pr_description.md  pyproject.toml  summary.html  summary.md  task-1-analysis.md  task-back.md  task-later.md  task.md  tasks-001.md  test-plan.md  world_cup_market_simulation-gemini.ipynb  world_cup_market_simulation.ipynb
nostra/.ipynb_checkpoints/: brazil_win_simulation-checkpoint.ipynb  world_cup_market_simulation-checkpoint.ipynb
nostra/designs/: 2025-12-11-ai-boost-design.html  2025-12-11-implementation-plan.md  2025-12-12-claim-error-analysis.html  batch-processing-design-2025-12-09.html  chainlink-integration-guide.md  cloud-run-deployment-guide.html  finalize-market-analysis.md  liquidity-ui-concept.md  liquidity_preview.html  task-3-batching.md  (+6 more)
photoshops/: mypositions-claims.psd  mypositions-open-orders.psd  mypositions-positions.psd
sections/: designs.html  devlogs.html  english.html  external.html  knowledge.html  nostra.html
(+33 files in other folders)
